@@ -1,5 +1,10 @@
 5/6/25:
 
+- Add end game conditions to stop from playing game if finished
+- Complete step 1, 2
+- Add function to simulate played game
+- Update checkWin logic
+- Add moveSuccessful variable to store result of dropMarker
 - Fix dropMarker function logic to correctly check row and column availability
 - Remove unnecessary filter logic in dropMarker function
 
